--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.1",
     "@types/mime-types": "^2.1.1",
     "typescript": "^5.1.6"
   },
@@ -17,6 +18,7 @@
   "dependencies": {
     "@googleapis/drive": "^8.0.0",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "mime-types": "^2.1.35",
     "youtube-dl-exec": "^2.4.6"
   }
