--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-ws": "^3.0.1",
     "@types/mime-types": "^2.1.1",
@@ -17,9 +18,12 @@
   "type": "module",
   "dependencies": {
     "@googleapis/drive": "^8.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "mime-types": "^2.1.35",
+    "node-fetch": "^3.3.2",
+    "short-uuid": "^4.2.2",
     "youtube-dl-exec": "^2.4.6"
   }
 }
